--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,15 @@
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
     "typescript": "4.5.3"
+  },
+  "lint-staged": {
+    "*.ts{,x}": [
+      "eslint --cache --fix"
+    ],
+    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
   }
 }
