--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "*.ts{,x}": [
       "eslint --cache --fix"
     ],
-    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
+    "*.{js,jsx,ts,tsx,md,html,css}": [
+      "prettier --write"
+    ]
   }
 }
