--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
+    "prisma": "^3.6.0",
     "typescript": "4.5.3"
   },
   "lint-staged": {
