--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "3.6.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -27,7 +28,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
-    "prisma": "^3.6.0",
+    "prisma": "3.6.0",
     "typescript": "4.5.3"
   },
   "lint-staged": {
